@@ -3,7 +3,7 @@ setuptools_scm
 sphinx
 sphinx_rtd_theme
 sphinxcontrib-seqdiag
-dbus-next
+dbus-fast
 pulsectl-asyncio
 pytest
 PyGObject
