@@ -29,10 +29,10 @@ import libqtile.config
 import libqtile.confreader
 import libqtile.layout
 import pytest
-from dbus_next.aio import MessageBus
-from dbus_next.constants import PropertyAccess
-from dbus_next.message import Variant
-from dbus_next.service import ServiceInterface, dbus_property, method
+from dbus_fast import Variant
+from dbus_fast.aio import MessageBus
+from dbus_fast.constants import PropertyAccess
+from dbus_fast.service import ServiceInterface, dbus_property, method
 
 import qtile_extras.widget.mpris2widget as mp
 from test.helpers import Retry
