@@ -28,7 +28,7 @@ deps =
     # CI has libxcommon-dev 1.4.0 so we need to match here
     xkbcommon < 1.5.0
     pywayland == 0.4.17
-    dbus-next
+    dbus-fast
     PyGObject
     requests
     pint
@@ -77,7 +77,7 @@ deps =
     # CI has libxkbcommon 1.4.0
     xkbcommon < 1.5.0
     pywayland == 0.4.17
-    dbus_next
+    dbus_fast
     requests
     pint
     stravalib <= 1.1.0
